added new image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				</ul>
 			</header>
 			<ul id="tmbs" class="row grid">
-				<li class="column grid2"><img src="imgs/art/diamond_560.jpg"></li>
+				<li class="column grid2"><img src="imgs/art/humhum_560.jpg"></li>
+				<li class="column grid1"><img src="imgs/art/diamond_560.jpg"></li>
 				<li class="column grid1"><img src="imgs/art/wraith_560.jpg"></li>
 				<li class="column grid1"><img src="imgs/art/megatron_560.jpg"></li>
 
