--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-
+		<link rel="shortcut icon" href="http://freeflow.me/favicon.ico">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/styles.min.css">
 
