abs position fix
position absolute the first image, margin-left in percentage key divs
at key breakpoints to correct flow. seems to work in chrome/safari thus
far

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/skullborn_560.jpg"></div>
                                 
                 <!-- Archived -->
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/blots_560.jpg"></li>
+				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/blots_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/humhum_560.jpg"></li>
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/diamond_560.jpg"></li>
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/wraith_560.jpg"></li>
+				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/diamond_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/wraith_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/megatron_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/autumn_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/hairday_560.jpg"></li>
