--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<link rel="shortcut icon" href="http://freeflow.me/favicon.ico">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/styles.min.css">
-
 		<!--[if lt IE 9]>
    			<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+   			<script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 		<![endif]-->
 	</head>
 	<body>
@@ -57,9 +57,6 @@
 		<footer>
 	
 		</footer>
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 
 		<!-- Google Analytics -->
 		<script>
