added a few more stub less files
need to flesh out the stub files for the detail page and re-org less
with imports to output 1 clean file.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Freeflow.me - 1 flow everyday</title>
+		<title>Freeflow.me - 1 flow daily</title>
 		<meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+        <meta property="og:title" content="Freeflow.me - 1 flow daily. A Project by Bryan Berger" />
+		<meta property="og:type" content="article" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:url" content="http://freeflow.me" />
+		<meta property="og:image" content="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/stormtrooper_560.jpg" />
+		<meta property="og:description" content="1 flow daily. I will be creating 1 piece a day for as long as possible! I call these freeflows as they are simply freeflow thoughts brought to life." />
+		<meta property="og:site_name" content="Freeflow.me - 1 flow daily" />
 
 		<!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 		<link rel="shortcut icon" href="http://freeflow.me/favicon.ico">
@@ -24,7 +32,7 @@
 		<!-- Start -->
 		
 		<main role="main" class="container">
-			<header class="grid5">
+			<header>
 				<h1>1 flow daily. A project by Bryan Berger</h1>
 				<ul class="social">
 					<li><a href="http://twitter.com/bryanberger"><img src="imgs/twitter.png"></a></li>
