new piece - owl

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
 			</header>
 			<ul id="tmbs" class="row grid">
 				<!-- Today's freeflow -->
-				<div class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/gem_560.jpg"></div>
+				<div class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/owl_560.jpg"></div>
 
 				<!-- 2nd item -->
-				<div class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/nevermore_560.jpg"></div>
-				<div class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/skullborn_560.jpg"></div>		
+				<div class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/gem_560.jpg"></div>
+				<!-- 3rd item -->
+				<div class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/nevermore_560.jpg"></div>					
 				<!-- 4th item -->
-				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/blots_560.jpg"></li>
+				<div class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/skullborn_560.jpg"></div>	
 				<!-- 5th item -->
-				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/humhum_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/blots_560.jpg"></li>
 
 				<!-- the rest -->
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/humhum_560.jpg"></li>
 				<li class="column grid1 "><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/diamond_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/wraith_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/megatron_560.jpg"></li>
