new pieces - diamond2 / tangled

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
 			</header>
 			<ul id="tmbs" class="row grid">
 				<!-- Today's freeflow -->
-				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/noise_560.jpg"></li>	
+				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/diamond2_560.jpg"></li>					
 				<!-- 2nd item -->
-				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/subcity_560.jpg"></li>	
+				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tangled_560.jpg"></li>						
 				<!-- 3rd item -->
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/fox_560.jpg"></li>		
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/noise_560.jpg"></li>							
 				<!-- 4th item -->
-				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/skew_560.jpg"></li>					
+				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/subcity_560.jpg"></li>					
 				<!-- 5th item -->
-				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/math_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/fox_560.jpg"></li>	
 				
 				<!-- the rest -->
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/skew_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/math_560.jpg"></li>
 				<li class="column grid1 "><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/bumblebee_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/geosine_560.jpg"></li>	
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/form_560.jpg"></li>
