--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<header>
 				<h1>1 flow daily. A project by Bryan Berger</h1>
 				<ul class="social">
-					<li><a href="http://twitter.com/bryanberger"><img src="imgs/twitter.png"></a></li>
-					<li><a href="http://facebook.com/bryanbergerdesign"><img src="imgs/facebook.png"></a></li>
+					<li><a href="http://twitter.com/bryanberger"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs//twitter.png"></a></li>
+					<li><a href="http://facebook.com/bryanbergerdesign"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/facebook.png"></a></li>
 				</ul>
 			</header>
 			<ul id="tmbs" class="row grid">
