new piece - patternzap

--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
 			</header>
 			<ul id="tmbs" class="row grid">
 				<!-- Today's freeflow -->
-				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/bobafett_560.jpg"></li>
+				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/patternzap_560.jpg"></li>
 				<!-- 2nd item -->
-				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yoda_560.jpg"></li>
+				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/bobafett_560.jpg"></li>
 				<!-- 3rd item -->
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/vader_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yoda_560.jpg"></li>
 				<!-- 4th item -->
-				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/prism_560.jpg"></li>
+				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/vader_560.jpg"></li>
 				<!-- 5th item -->
-				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tapit_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/prism_560.jpg"></li>
 
 				<!-- the rest -->
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tapit_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/spiral_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/gundam_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/heart2_560.jpg"></li>
