--- a/index.html
+++ b/index.html
@@ -37,21 +37,25 @@
 				<ul class="social">
 					<li><a href="http://twitter.com/bryanberger"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs//twitter.png"></a></li>
 					<li><a href="http://facebook.com/bryanbergerdesign"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/facebook.png"></a></li>
+					<li><a href="http://behance.net/bryanberger"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/behance.png"></a></li>
 				</ul>
 			</header>
 			<ul id="tmbs" class="row grid">
 				<!-- Today's freeflow -->
-				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yodel_560.jpg"></li>
+				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/faraway_560.jpg"></li>
 				<!-- 2nd item -->
-				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/zorsh_560.jpg"></li>
+				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/flash_560.jpg"></li>
 				<!-- 3rd item -->
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/alltiedup_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tigerclaw_560.jpg"></li>
 				<!-- 4th item -->
-				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/smiter_560.jpg"></li>
+				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yodel_560.jpg"></li>
 				<!-- 5th item -->
-				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/cleanshot_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/zorsh_560.jpg"></li>
 
 				<!-- the rest -->
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/alltiedup_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/smiter_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/cleanshot_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/patternzap_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/bobafett_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yoda_560.jpg"></li>
