new piece - beq

--- a/index.html
+++ b/index.html
@@ -42,17 +42,18 @@
 			</header>
 			<ul id="tmbs" class="row grid">
 				<!-- Today's freeflow -->
-				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/homer_560.jpg"></li>
+				<li class="column grid2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/beq_560.jpg"></li>
 				<!-- 2nd item -->
-				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/christmas2013_560.jpg"></li>
+				<li class="column grid1 alt1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/homer_560.jpg"></li>
 				<!-- 3rd item -->
-				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/faraway_560.jpg"></li>
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/christmas2013_560.jpg"></li>
 				<!-- 4th item -->
-				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/flash_560.jpg"></li>
+				<li class="column grid1 alt2"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/faraway_560.jpg"></li>
 				<!-- 5th item -->
-				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tigerclaw_560.jpg"></li>
+				<li class="column grid1 alt1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/flash_560.jpg"></li>
 
 				<!-- the rest -->
+				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/tigerclaw_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/yodel_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/zorsh_560.jpg"></li>
 				<li class="column grid1"><img src="https://dl.dropboxusercontent.com/u/584602/freeflow.me/imgs/art/alltiedup_560.jpg"></li>
